--- a/app/src/main/res/layout/activity_list_mitra.xml
+++ b/app/src/main/res/layout/activity_list_mitra.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/host_listshop_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".ui.listmitra.ListMitraActivity">
+    tools:context=".ui.listmitra.ListMitraActivity"
+    tools:ignore="MissingDefaultResource">
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
