--- a/app/src/main/res/layout/fragment_dialog_tawar_mitra.xml
+++ b/app/src/main/res/layout/fragment_dialog_tawar_mitra.xml
@@ -38,8 +38,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:paddingVertical="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView11"
+        app:layout_constraintStart_toStartOf="@+id/textView11"
         app:layout_constraintTop_toBottomOf="@+id/textView11">
 
         <TextView
@@ -63,6 +63,7 @@
             android:paddingEnd="8dp"
             android:textColor="@color/font_default"
             android:textColorHint="@color/font_default"
+            android:textColorLink="@color/font_default"
             android:textSize="20sp" />
 
     </LinearLayout>
@@ -70,15 +71,14 @@
     <Button
         android:id="@+id/btn_tawar"
         style="@style/ButtonStyle"
-        android:layout_height="50dp"
+        android:layout_height="56dp"
         android:layout_gravity="center"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:background="@drawable/bg_btn_blue"
         android:fontFamily="@font/roboto_bold"
         android:text="Buat Penawaran"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
