--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -72,7 +72,7 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:fontFamily">@font/roboto_medium</item>
-        <item name="android:background">@drawable/bg_btn_blue</item>
+        <item name="android:backgroundTint">@color/colorPrimaryDark</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 
