--- a/app/src/main/res/layout/fragment_dialog_batalkan_pesanan.xml
+++ b/app/src/main/res/layout/fragment_dialog_batalkan_pesanan.xml
@@ -121,19 +121,14 @@
         app:layout_constraintEnd_toEndOf="@+id/rg_kategori"
         app:layout_constraintStart_toStartOf="@+id/rg_kategori" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_batalkan_pesanan"
         style="@style/ButtonStyle"
-        android:layout_height="56dp"
-        android:layout_gravity="center"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/bg_btn_blue"
         android:enabled="false"
-        android:fontFamily="@font/roboto_bold"
         android:text="Batalkan Pesanan"
-        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rg_kategori" />
