--- a/app/src/main/res/layout/fragment_dialog_tawar_mitra.xml
+++ b/app/src/main/res/layout/fragment_dialog_tawar_mitra.xml
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:paddingVertical="8dp"
+        android:paddingVertical="12dp"
         app:layout_constraintEnd_toEndOf="@+id/textView11"
         app:layout_constraintStart_toStartOf="@+id/textView11"
         app:layout_constraintTop_toBottomOf="@+id/textView11">
@@ -68,17 +68,14 @@
 
     </LinearLayout>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_tawar"
         style="@style/ButtonStyle"
-        android:layout_height="56dp"
-        android:layout_gravity="center"
+        app:cornerRadius="8dp"
+        android:enabled="false"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
-        android:fontFamily="@font/roboto_bold"
         android:text="Buat Penawaran"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
