--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -70,9 +70,11 @@
 
     <style name="ButtonStyle">
         <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">56dp</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:fontFamily">@font/roboto_medium</item>
-        <item name="android:backgroundTint">@color/colorPrimaryDark</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/roboto_bold</item>
+        <item name="android:backgroundTint">@color/color_states_materialbutton</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 
