--- a/app/src/main/res/layout/item_rv_list_shop.xml
+++ b/app/src/main/res/layout/item_rv_list_shop.xml
@@ -152,6 +152,7 @@
         style="@style/Responsive16dp"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:alpha="0.25"
         android:layout_marginTop="16dp"
         android:background="@color/colorLine"
         app:layout_constraintEnd_toEndOf="parent"
