--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -155,6 +155,7 @@
                     android:id="@+id/et_email_user"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
+                    android:enabled="false"
                     android:fontFamily="@font/roboto"
                     android:inputType="textEmailAddress"
                     android:paddingStart="24dp"
