--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -394,7 +394,7 @@
                         android:id="@+id/imgAdsQuote"
                         android:layout_width="0dp"
                         android:layout_height="0dp"
-                        android:src="@color/colorLine"
+                        android:background="@drawable/kutipan_terbaru"
                         android:scaleType="fitCenter"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
