--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -29,7 +29,7 @@
         map:layout_constraintTop_toTopOf="parent">
 
         <EditText
-            android:id="@+id/etLocation"
+            android:id="@+id/search_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_search_maps"
