--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -56,6 +56,7 @@
                         android:hint="Tentukan Lokasi Anda"
                         android:inputType="text"
                         android:ellipsize="end"
+                        android:focusable="false"
                         android:importantForAutofill="no"
                         android:singleLine="true"
                         android:paddingStart="8dp"
