--- a/app/src/main/res/layout/item_rv_list_shop.xml
+++ b/app/src/main/res/layout/item_rv_list_shop.xml
@@ -78,6 +78,7 @@
                             android:layout_width="16dp"
                             android:layout_height="16dp"
                             android:layout_marginStart="4dp"
+                            android:visibility="gone"
                             android:background="@drawable/ic_baseline_check_circle_24" />
 
                     </LinearLayout>
