--- a/app/src/main/res/layout/item_rv_ads_home.xml
+++ b/app/src/main/res/layout/item_rv_ads_home.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/item_rv_img_ads"
+        android:id="@+id/img_ads_home"
         android:layout_width="match_parent"
         android:layout_height="184dp"
         android:scaleType="centerInside"
